--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-.sass-cache/
-bower_components/
-css/
-index.html
-sublime/
+lib-cov
+lcov.info
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+build
+.grunt
+
+node_modules
