--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "underscore": "~1.6.0",
     "mongodb": "~1.3.23",
     "express": "~3.4.8",
-    "grunt-sync": "0.0.5"
+    "grunt-sync": "0.0.5",
+    "express-partials": "~0.2.0",
+    "bcrypt": "~0.7.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
