--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "express": "~3.4.8",
     "grunt-sync": "0.0.5",
     "express-partials": "~0.2.0",
-    "bcrypt": "~0.7.7"
+    "bcrypt": "~0.7.7",
+    "passport": "^0.2.0",
+    "connect-mongo": "^0.4.0",
+    "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
