--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "passport-http": "^0.2.2",
     "passport-local": "^1.0.0"
   },
+  "engines": {
+    "node": "0.11.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
