--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "grunt-contrib-sass": "~0.4.1",
     "grunt-contrib-watch": "~0.5.1",
     "jade": "~0.34.1",
-    "mocha": "^1.18.2",
     "sass": "~0.5.0",
     "should": "^3.3.1",
     "supertest": "^0.12.0"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "mocha"
   },
   "author": "Jeffrey Hann",
   "license": "GPL V2"
