--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: node_js
 node_js:
 - '0.10'
-before_install: npm install -g mocha
+before_script: 
+- npm install -g mocha
+- npm install -g istanbul
+after_script: istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 deploy:
   provider: heroku
   api_key:
     secure: V+5D1SsBAFYnSq29dtNFiiZdupkc2OsBZReYuL1TltN7cXeJ7/WB8OsdJkf12Hh6HwidhGTqP6f3CC7MVzHCi7gEOHGE15xDLF0prJPKBri8xLg+/51FrRkyRmo3dwVA58d5BaTdmTFlWJtReG5fYLRpv3PjiVeRuE0TaEYfp8M=
   app: bigscarylist
+notifications:
+  email:
+    - jeffhann@gmail.com 
